Fix modal z-index-bug; make image upload modal responsive

--- a/src/TrueOrFalse.Frontend.Web/Style/grid.less
+++ b/src/TrueOrFalse.Frontend.Web/Style/grid.less
@@ -2,10 +2,17 @@
 
 //reduce paddings for nested columns
 
-.row .row, .row .form-horizontal .form-group  {
-    margin-right: -10px;
-    margin-left: -10px;
+.row, .form-horizontal .form-group  {
 
+    .row & {
+        margin-right: -10px;
+        margin-left: -10px;
+    }
+
+    .modal-content & {
+        margin-right: -15px;
+        margin-left: -15px;
+    }
 
     .col-xs-1,
     .col-sm-1,
@@ -55,8 +62,16 @@
     .col-sm-12,
     .col-md-12,
     .col-lg-12 {
-        padding-left: 10px;
-        padding-right: 10px;
+
+        .row & {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+
+        .modal-content & {
+            padding-left: 15px;
+            padding-right: 15px;
+        }
     }
 
 }
